# tinypay

./: ASSUMPTIONS.md  Cargo.toml  README.md  test.sh
src/: main.rs
src/lib/: accounts.rs  events.rs  lib.rs
src/lib/accounts/: csv.rs
src/lib/events/: csv.rs
tests/: 01_transactions.csv  03_transactions.csv  06_accounts.csv  06_transactions.csv  07_transactions.csv  08_accounts.csv  08_transactions.csv  10_transactions.csv  1_accounts.csv  2_transactions.csv  4_accounts.csv  4_transactions.csv  5_accounts.csv  5_transactions.csv  7_accounts.csv  8_accounts.csv  8_transactions.csv  9_accounts.csv  9_transactions.csv  lib.rs
